finish basic features of ArgumentReader as well as its test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required(VERSION 3.24)
 project(HwaUtil)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
-add_executable(HwaUtil main.cpp)
+add_subdirectory(src)
+add_subdirectory(test)
+
+
+
+
+
+
