finish coding MatDemoTest.

--- a/test/ArgumentReaderTest/CMakeLists.txt
+++ b/test/ArgumentReaderTest/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(ArgumentReaderTest ArgumentReaderTest.cpp)
 target_link_libraries(ArgumentReaderTest ArgumentReader)
 
-include_directories(${CMAKE_SOURCE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/src)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin/ArgumentReaderTest)
 
