--- a/src/Mat_Demo/CMakeLists.txt
+++ b/src/Mat_Demo/CMakeLists.txt
@@ -1,4 +1,5 @@
 aux_source_directory(. DIR_LIB_SRCS)
 
-set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin/Mat_Demo)
-add_library(Mat_Demo ${DIR_LIB_SRCS})
+set(LIB_NAME Mat_Demo)
+add_library(${LIB_NAME} ${DIR_LIB_SRCS})
+set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib/${LIB_NAME})
