--- a/test/TimerTest/CMakeLists.txt
+++ b/test/TimerTest/CMakeLists.txt
@@ -11,3 +11,7 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin/${PROG_NAME})
 
 # test file
 configure_file(input.txt ${EXECUTABLE_OUTPUT_PATH}/input.txt COPYONLY)
+
+if ("${MPI}" STREQUAL on)
+    target_link_libraries(${PROG_NAME} ${MPI_LIBRARIES})
+endif ()
