changed Timer to adapt to both MPI and none_MPI

--- a/exec/CMakeLists.txt
+++ b/exec/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(TimerTest)
 add_subdirectory(ArgumentReaderTest)
 add_subdirectory(MatDemoTest)
 add_subdirectory(MatManipTest)
+add_subdirectory(MatTransmit)
