bug fixes and new codes.
fixed wrong matrix division and changed code to finish the part for reading matrix in new project 'MPIAdd'.

--- a/exec/CMakeLists.txt
+++ b/exec/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(ArgumentReaderTest)
 add_subdirectory(MatDemoTest)
 add_subdirectory(MatManipTest)
 add_subdirectory(MatTransmit)
+add_subdirectory(MPIAdd)
