updated ArgumentReader to fix bugs; created ClassProject.

--- a/exec/CMakeLists.txt
+++ b/exec/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(MatDemoTest)
 add_subdirectory(MatManipTest)
 add_subdirectory(MatTransmit)
 add_subdirectory(MPIAdd)
+add_subdirectory(ClassProject)
