--- a/exec/ClassProject/CMakeLists.txt
+++ b/exec/ClassProject/CMakeLists.txt
@@ -23,21 +23,25 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E
 if ("${MPI}" STREQUAL on)
     message(STATUS ${PROG_NAME} ": MPI is on")
     target_link_libraries(${PROG_NAME} ${MPI_LIBRARIES})
-    # message(STATUS ${SCALAPACK_LIBRARIES})
-    # target_link_libraries(${PROG_NAME} ${SCALAPACK_LIBRARIES})
+    # Scalapack
+    if ("${SCALAPACK}" STREQUAL on)
+        message(STATUS ${PROG_NAME} ": Scalapack is on")
+        target_link_libraries(${PROG_NAME} libscalapack.a)
+    endif ()
 endif ()
 
 # OpenMP
 if ("${OPENMP}" STREQUAL on)
-    FIND_PACKAGE( OpenMP REQUIRED)
-    if(OPENMP_FOUND)
+    FIND_PACKAGE(OpenMP REQUIRED)
+    if (OPENMP_FOUND)
         message("OPENMP FOUND")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-    endif()
+    endif ()
     message(STATUS ${PROG_NAME} ": OpenMP is on")
     set(OPENMP_COMPILE_DEFINITIONS ${OPENMP_COMPILE_DEFINITIONS} __OPENMP__)
     add_compile_definitions(${OPENMP_COMPILE_DEFINITIONS})
     target_link_libraries(${PROG_NAME} ${OpenMP_CXX_LIBRARIES})
 endif ()
+
