--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,18 @@ else ()
     message(STATUS "MPI is off")
 endif ()
 
+# OpenMP
+if ("${OPENMP}" STREQUAL on)
+    FIND_PACKAGE(OpenMP REQUIRED)
+    if (OPENMP_FOUND)
+        message("OPENMP FOUND")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+    endif ()
+    set(OPENMP_COMPILE_DEFINITIONS ${OPENMP_COMPILE_DEFINITIONS} __OPENMP__)
+    add_compile_definitions(${OPENMP_COMPILE_DEFINITIONS})
+endif ()
 
 
 add_subdirectory(src)
